# k-sdl

./: .gitignore  CMakeLists.txt  background.c  common.h  draw.c  draw.h  font.c  game.c  game.h  graphics.c  graphics.h  intro.c  main.c  script.c  script.h  sdl.c  show_bcg.c  show_sprite.c  sound.c  sound.h  sprite.c  sprite.h  util.c
